// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cases utilities accommodation renderers for current accommodation returns a formatted card for a CAS1 accommodation 1`] = `
{
  "arrangementType": "CAS1",
  "cardType": "current",
  "heading": "Current accommodation",
  "rows": [
    {
      "key": {
        "text": "Type",
      },
      "value": {
        "html": "Approved Premises (CAS1)",
      },
    },
    {
      "key": {
        "text": "End date",
      },
      "value": {
        "html": "
          3 February 2026
          <br />
          55 days left
        ",
      },
    },
    {
      "key": {
        "text": "Address",
      },
      "value": {
        "html": "9 Foo Bar<br />Foocity<br />FO0 1BA",
      },
    },
  ],
  "startDate": "2025-12-01",
}
`;

exports[`cases utilities accommodation renderers for current accommodation returns a formatted card for a CAS2 accommodation 1`] = `
{
  "arrangementType": "CAS2",
  "cardType": "current",
  "heading": "Current accommodation",
  "rows": [
    {
      "key": {
        "text": "Type",
      },
      "value": {
        "html": "CAS2 for HDC",
      },
    },
    {
      "key": {
        "text": "End date",
      },
      "value": {
        "html": "
          12 March 2026
          <br />
          92 days left
        ",
      },
    },
    {
      "key": {
        "text": "Address",
      },
      "value": {
        "html": "9 Foo Bar<br />Foocity<br />FO0 1BA",
      },
    },
  ],
  "startDate": "2025-12-01",
}
`;

exports[`cases utilities accommodation renderers for current accommodation returns a formatted card for a CAS2v2 accommodation 1`] = `
{
  "arrangementType": "CAS2V2",
  "cardType": "current",
  "heading": "Current accommodation",
  "rows": [
    {
      "key": {
        "text": "Type",
      },
      "value": {
        "html": "CAS2 for Bail",
      },
    },
    {
      "key": {
        "text": "End date",
      },
      "value": {
        "html": "
          23 May 2026
          <br />
          164 days left
        ",
      },
    },
    {
      "key": {
        "text": "Address",
      },
      "value": {
        "html": "9 Foo Bar<br />Foocity<br />FO0 1BA",
      },
    },
  ],
  "startDate": "2025-12-01",
}
`;

exports[`cases utilities accommodation renderers for current accommodation returns a formatted card for a CAS3 accommodation 1`] = `
{
  "arrangementType": "CAS3",
  "cardType": "current",
  "heading": "Current accommodation",
  "rows": [
    {
      "key": {
        "text": "Type",
      },
      "value": {
        "html": "Temporary Accommodation (CAS3)",
      },
    },
    {
      "key": {
        "text": "End date",
      },
      "value": {
        "html": "
          31 July 2026
          <br />
          233 days left
        ",
      },
    },
    {
      "key": {
        "text": "Address",
      },
      "value": {
        "html": "9 Foo Bar<br />Foocity<br />FO0 1BA",
      },
    },
  ],
  "startDate": "2025-12-01",
}
`;

exports[`cases utilities accommodation renderers for current accommodation returns a formatted card for a No fixed abode accommodation 1`] = `
{
  "arrangementType": "NO_FIXED_ABODE",
  "cardType": "current",
  "heading": "Current accommodation",
  "rows": [],
  "startDate": "2025-12-01",
}
`;

exports[`cases utilities accommodation renderers for current accommodation returns a formatted card for a Prison (no qualifier) accommodation 1`] = `
{
  "arrangementType": "PRISON",
  "cardType": "current",
  "heading": "Current accommodation",
  "rows": [
    {
      "key": {
        "text": "Type",
      },
      "value": {
        "html": "Prison",
      },
    },
    {
      "key": {
        "text": "Release date",
      },
      "value": {
        "html": "
          11 December 2025
          <br />
          1 day left
        ",
      },
    },
    {
      "key": {
        "text": "Address",
      },
      "value": {
        "html": "<strong>HMP Foobar</strong><br />9 Foo Bar<br />Foocity<br />FO0 1BA",
      },
    },
  ],
  "startDate": "2025-12-01",
}
`;

exports[`cases utilities accommodation renderers for current accommodation returns a formatted card for a Prison accommodation 1`] = `
{
  "arrangementType": "PRISON",
  "cardType": "current",
  "heading": "Current accommodation",
  "rows": [
    {
      "key": {
        "text": "Type",
      },
      "value": {
        "html": "Prison (licence)",
      },
    },
    {
      "key": {
        "text": "Release date",
      },
      "value": {
        "html": "
          1 January 2026
          <br />
          22 days left
        ",
      },
    },
    {
      "key": {
        "text": "Address",
      },
      "value": {
        "html": "<strong>HMP Foobar</strong><br />9 Foo Bar<br />Foocity<br />FO0 1BA",
      },
    },
  ],
  "startDate": "2025-12-01",
}
`;

exports[`cases utilities accommodation renderers for current accommodation returns a formatted card for a Private address accommodation 1`] = `
{
  "arrangementType": "PRIVATE",
  "cardType": "current",
  "heading": "Current accommodation",
  "rows": [
    {
      "key": {
        "text": "Type",
      },
      "value": {
        "html": "Private address",
      },
    },
    {
      "key": {
        "text": "End date",
      },
      "value": {
        "html": "
          10 September 2026
          <br />
          274 days left
        ",
      },
    },
    {
      "key": {
        "text": "Address",
      },
      "value": {
        "html": "<strong>Friends or family (not tenant or owner)</strong><br />9 Foo Bar<br />Foocity<br />FO0 1BA",
      },
    },
  ],
  "startDate": "2025-12-01",
}
`;

exports[`cases utilities accommodation renderers for current accommodation returns a formatted card for a Undefined accommodation 1`] = `""`;

exports[`cases utilities accommodation renderers for current accommodation returns a formatted cell for a CAS1 accommodation 1`] = `
"
    Approved Premises (CAS1)
    
  
      <br />
      <span class="govuk-hint">until 3 February 2026</span>
      <br />
      <span class="govuk-!-display-inline-block govuk-!-margin-top-1">55 days left</span>
    "
`;

exports[`cases utilities accommodation renderers for current accommodation returns a formatted cell for a CAS2 accommodation 1`] = `
"
    CAS2 for HDC
    
  
      <br />
      <span class="govuk-hint">until 12 March 2026</span>
      <br />
      <span class="govuk-!-display-inline-block govuk-!-margin-top-1">92 days left</span>
    "
`;

exports[`cases utilities accommodation renderers for current accommodation returns a formatted cell for a CAS2v2 accommodation 1`] = `
"
    CAS2 for Bail
    
  
      <br />
      <span class="govuk-hint">until 23 May 2026</span>
      <br />
      <span class="govuk-!-display-inline-block govuk-!-margin-top-1">164 days left</span>
    "
`;

exports[`cases utilities accommodation renderers for current accommodation returns a formatted cell for a CAS3 accommodation 1`] = `
"
    Temporary Accommodation (CAS3)
    
  
      <br />
      <span class="govuk-hint">until 31 July 2026</span>
      <br />
      <span class="govuk-!-display-inline-block govuk-!-margin-top-1">233 days left</span>
    "
`;

exports[`cases utilities accommodation renderers for current accommodation returns a formatted cell for a No fixed abode accommodation 1`] = `
"
    No fixed abode
    
  
      <br />
      <span class="govuk-hint">until 10 September 2026</span>
      <br />
      <span class="govuk-!-display-inline-block govuk-!-margin-top-1">274 days left</span>
    "
`;

exports[`cases utilities accommodation renderers for current accommodation returns a formatted cell for a Prison (no qualifier) accommodation 1`] = `
"
    HMP Foobar
  
      <br />
      <span class="govuk-hint">until 11 December 2025</span>
      <br />
      <span class="govuk-!-display-inline-block govuk-!-margin-top-1">1 day left</span>
    "
`;

exports[`cases utilities accommodation renderers for current accommodation returns a formatted cell for a Prison accommodation 1`] = `
"
    HMP Foobar (licence)
  
      <br />
      <span class="govuk-hint">until 1 January 2026</span>
      <br />
      <span class="govuk-!-display-inline-block govuk-!-margin-top-1">22 days left</span>
    "
`;

exports[`cases utilities accommodation renderers for current accommodation returns a formatted cell for a Private address accommodation 1`] = `
"
    Private address
    <br />Friends or family (not tenant or owner)
  
      <br />
      <span class="govuk-hint">until 10 September 2026</span>
      <br />
      <span class="govuk-!-display-inline-block govuk-!-margin-top-1">274 days left</span>
    "
`;

exports[`cases utilities accommodation renderers for current accommodation returns a formatted cell for a Undefined accommodation 1`] = `""`;

exports[`cases utilities accommodation renderers for next accommodation returns a formatted card for a CAS1 accommodation 1`] = `
{
  "arrangementType": "CAS1",
  "cardType": "next",
  "heading": "Next accommodation",
  "rows": [
    {
      "key": {
        "text": "Status",
      },
      "value": {
        "html": "
        <p>
          <strong>Approved Premises (CAS1)</strong>
          <br /><span class="govuk-hint">From Tuesday 3 February 2026</span>
        </p>
      ",
      },
    },
    {
      "key": {
        "text": "Address",
      },
      "value": {
        "html": "9 Foo Bar<br />Foocity<br />FO0 1BA",
      },
    },
  ],
  "startDate": "2026-02-03",
}
`;

exports[`cases utilities accommodation renderers for next accommodation returns a formatted card for a CAS2 accommodation 1`] = `
{
  "arrangementType": "CAS2",
  "cardType": "next",
  "heading": "Next accommodation",
  "rows": [
    {
      "key": {
        "text": "Status",
      },
      "value": {
        "html": "
        <p>
          <strong>CAS2 for HDC</strong>
          <br /><span class="govuk-hint">From Thursday 12 March 2026</span>
        </p>
      ",
      },
    },
    {
      "key": {
        "text": "Address",
      },
      "value": {
        "html": "9 Foo Bar<br />Foocity<br />FO0 1BA",
      },
    },
  ],
  "startDate": "2026-03-12",
}
`;

exports[`cases utilities accommodation renderers for next accommodation returns a formatted card for a CAS2v2 accommodation 1`] = `
{
  "arrangementType": "CAS2V2",
  "cardType": "next",
  "heading": "Next accommodation",
  "rows": [
    {
      "key": {
        "text": "Status",
      },
      "value": {
        "html": "
        <p>
          <strong>CAS2 for Bail</strong>
          <br /><span class="govuk-hint">From Saturday 23 May 2026</span>
        </p>
      ",
      },
    },
    {
      "key": {
        "text": "Address",
      },
      "value": {
        "html": "9 Foo Bar<br />Foocity<br />FO0 1BA",
      },
    },
  ],
  "startDate": "2026-05-23",
}
`;

exports[`cases utilities accommodation renderers for next accommodation returns a formatted card for a CAS3 accommodation 1`] = `
{
  "arrangementType": "CAS3",
  "cardType": "next",
  "heading": "Next accommodation",
  "rows": [
    {
      "key": {
        "text": "Status",
      },
      "value": {
        "html": "
        <p>
          <strong>Temporary Accommodation (CAS3)</strong>
          <br /><span class="govuk-hint">From Friday 31 July 2026</span>
        </p>
      ",
      },
    },
    {
      "key": {
        "text": "Address",
      },
      "value": {
        "html": "9 Foo Bar<br />Foocity<br />FO0 1BA",
      },
    },
  ],
  "startDate": "2026-07-31",
}
`;

exports[`cases utilities accommodation renderers for next accommodation returns a formatted card for a No fixed abode accommodation 1`] = `
{
  "arrangementType": "NO_FIXED_ABODE",
  "cardType": "next",
  "heading": "Next accommodation",
  "rows": [],
  "startDate": "2026-09-10",
}
`;

exports[`cases utilities accommodation renderers for next accommodation returns a formatted card for a Prison (no qualifier) accommodation 1`] = `
{
  "arrangementType": "PRISON",
  "cardType": "next",
  "heading": "Next accommodation",
  "rows": [
    {
      "key": {
        "text": "Status",
      },
      "value": {
        "html": "
        <p>
          <strong>Prison</strong>
          <br /><span class="govuk-hint">From Thursday 11 December 2025</span>
        </p>
      ",
      },
    },
    {
      "key": {
        "text": "Address",
      },
      "value": {
        "html": "<strong>HMP Foobar</strong><br />9 Foo Bar<br />Foocity<br />FO0 1BA",
      },
    },
  ],
  "startDate": "2025-12-11",
}
`;

exports[`cases utilities accommodation renderers for next accommodation returns a formatted card for a Prison accommodation 1`] = `
{
  "arrangementType": "PRISON",
  "cardType": "next",
  "heading": "Next accommodation",
  "rows": [
    {
      "key": {
        "text": "Status",
      },
      "value": {
        "html": "
        <p>
          <strong>Prison (licence)</strong>
          <br /><span class="govuk-hint">From Thursday 1 January 2026</span>
        </p>
      ",
      },
    },
    {
      "key": {
        "text": "Address",
      },
      "value": {
        "html": "<strong>HMP Foobar</strong><br />9 Foo Bar<br />Foocity<br />FO0 1BA",
      },
    },
  ],
  "startDate": "2026-01-01",
}
`;

exports[`cases utilities accommodation renderers for next accommodation returns a formatted card for a Private address accommodation 1`] = `
{
  "arrangementType": "PRIVATE",
  "cardType": "next",
  "heading": "Next accommodation",
  "rows": [
    {
      "key": {
        "text": "Status",
      },
      "value": {
        "html": "
        <p>
          <strong>Private address</strong>
          <br /><span class="govuk-hint">From Thursday 10 September 2026</span>
        </p>
      ",
      },
    },
    {
      "key": {
        "text": "Address",
      },
      "value": {
        "html": "<strong>Friends or family (not tenant or owner)</strong><br />9 Foo Bar<br />Foocity<br />FO0 1BA",
      },
    },
  ],
  "startDate": "2026-09-10",
}
`;

exports[`cases utilities accommodation renderers for next accommodation returns a formatted card for a Undefined accommodation 1`] = `""`;

exports[`cases utilities accommodation renderers for next accommodation returns a formatted cell for a CAS1 accommodation 1`] = `
"
    Approved Premises (CAS1)
    
  
      <br />
      <span class="govuk-hint">from 3 February 2026</span>
    "
`;

exports[`cases utilities accommodation renderers for next accommodation returns a formatted cell for a CAS2 accommodation 1`] = `
"
    CAS2 for HDC
    
  
      <br />
      <span class="govuk-hint">from 12 March 2026</span>
    "
`;

exports[`cases utilities accommodation renderers for next accommodation returns a formatted cell for a CAS2v2 accommodation 1`] = `
"
    CAS2 for Bail
    
  
      <br />
      <span class="govuk-hint">from 23 May 2026</span>
    "
`;

exports[`cases utilities accommodation renderers for next accommodation returns a formatted cell for a CAS3 accommodation 1`] = `
"
    Temporary Accommodation (CAS3)
    
  
      <br />
      <span class="govuk-hint">from 31 July 2026</span>
    "
`;

exports[`cases utilities accommodation renderers for next accommodation returns a formatted cell for a No fixed abode accommodation 1`] = `
"
    No fixed abode
    
  
      <br />
      <span class="govuk-hint">from 10 September 2026</span>
    "
`;

exports[`cases utilities accommodation renderers for next accommodation returns a formatted cell for a Prison (no qualifier) accommodation 1`] = `
"
    HMP Foobar
  
      <br />
      <span class="govuk-hint">from 11 December 2025</span>
    "
`;

exports[`cases utilities accommodation renderers for next accommodation returns a formatted cell for a Prison accommodation 1`] = `
"
    HMP Foobar (licence)
  
      <br />
      <span class="govuk-hint">from 1 January 2026</span>
    "
`;

exports[`cases utilities accommodation renderers for next accommodation returns a formatted cell for a Private address accommodation 1`] = `
"
    Private address
    <br />Friends or family (not tenant or owner)
  
      <br />
      <span class="govuk-hint">from 10 September 2026</span>
    "
`;

exports[`cases utilities accommodation renderers for next accommodation returns a formatted cell for a Undefined accommodation 1`] = `""`;

exports[`cases utilities personCell returns a formatted cell for a given person 1`] = `
"<div class="sas-person-cell">
    <div class="govuk-!-margin-bottom-2">
      <a
        class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold"
        href="/cases/C321654"
        >Dave Foo</a
      >
    </div>

    <dl class="sas-risk-tags govuk-!-margin-0 govuk-!-margin-bottom-1">
      <div class="sas-risk-tag sas-risk-tag--very-high">
    <dt>RoSH</dt>
    <dd>Very high</dd>
  </div>
      <div class="sas-risk-tag sas-risk-tag--tier">
        <dt>Tier</dt>
        <dd>B2</dd>
      </div>
    </dl>

    <dl class="sas-person-details govuk-!-margin-0">
      <div>
        <dt>Date of birth</dt>
        <dd>9 October 1980 (45)</dd>
      </div>
      <div>
        <dt>CRN</dt>
        <dd>C321654</dd>
      </div>
      <div>
        <dt>Prison number</dt>
        <dd>A1234BC</dd>
      </div>
    </dl>
  </div>"
`;
